--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ carbon {
 
 carbon content {
     width: 55%;
-    padding: 10rem 0 0 3rem
+    padding: 10rem 0 1rem 3rem;
 }
 
 /* Follow */
@@ -323,6 +323,7 @@ footer globe i {
     
       carbon content {
         width: 85%;
+
       }
 }
 
